--- a/src/PopForums.AzureKit.Functions/PopForums.AzureKit.Functions.csproj
+++ b/src/PopForums.AzureKit.Functions/PopForums.AzureKit.Functions.csproj
@@ -14,12 +14,12 @@
 		<OutputType>Exe</OutputType>
 	</PropertyGroup>
 	<ItemGroup>
-		<PackageReference Include="Microsoft.Extensions.DependencyInjection" Version="6.0.0" />
-		<PackageReference Include="Microsoft.Azure.Functions.Worker.Extensions.Storage" Version="5.0.0" />
-		<PackageReference Include="Microsoft.Azure.Functions.Worker.Extensions.Timer" Version="4.1.0" />
-		<PackageReference Include="Microsoft.Azure.Functions.Worker.Extensions.Http" Version="3.0.13" />
-		<PackageReference Include="Microsoft.Azure.Functions.Worker.Sdk" Version="1.7.0" OutputItemType="Analyzer" />
-		<PackageReference Include="Microsoft.Azure.Functions.Worker" Version="1.10.0" />
+		<PackageReference Include="Microsoft.Extensions.DependencyInjection" />
+		<PackageReference Include="Microsoft.Azure.Functions.Worker.Extensions.Storage" />
+		<PackageReference Include="Microsoft.Azure.Functions.Worker.Extensions.Timer" />
+		<PackageReference Include="Microsoft.Azure.Functions.Worker.Extensions.Http" />
+		<PackageReference Include="Microsoft.Azure.Functions.Worker.Sdk" OutputItemType="Analyzer" />
+		<PackageReference Include="Microsoft.Azure.Functions.Worker" />
 	</ItemGroup>
 	<ItemGroup>
 		<ProjectReference Include="..\PopForums.AzureKit\PopForums.AzureKit.csproj" />
