--- a/src/PopForums.ElasticKit/PopForums.ElasticKit.csproj
+++ b/src/PopForums.ElasticKit/PopForums.ElasticKit.csproj
@@ -15,8 +15,8 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <PackageReference Include="NEST" Version="7.17.4" />
-    <PackageReference Include="Polly" Version="7.2.3" />
+    <PackageReference Include="NEST" />
+    <PackageReference Include="Polly" />
   </ItemGroup>
 
   <ItemGroup>
