--- a/src/PopForums.Test/PopForums.Test.csproj
+++ b/src/PopForums.Test/PopForums.Test.csproj
@@ -14,13 +14,13 @@
 	</ItemGroup>
 
 	<ItemGroup>
-		<PackageReference Include="Microsoft.NET.Test.Sdk" Version="17.3.2" />
-		<PackageReference Include="xunit.runner.visualstudio" Version="2.4.5">
+		<PackageReference Include="Microsoft.NET.Test.Sdk" />
+		<PackageReference Include="xunit.runner.visualstudio">
 			<PrivateAssets>all</PrivateAssets>
 			<IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
 		</PackageReference>
-		<PackageReference Include="Moq" Version="4.18.2" />
-		<PackageReference Include="xunit" Version="2.4.2" />
+		<PackageReference Include="Moq" />
+		<PackageReference Include="xunit" />
 	</ItemGroup>
 
 	<ItemGroup>
