Add docker support

--- a/src/PopForums.Web/appsettings.json
+++ b/src/PopForums.Web/appsettings.json
@@ -13,7 +13,7 @@
       "ConnectionString": "UseDevelopmentStorage=true"
     },
     "Database": {
-      "ConnectionString": "server=localhost;Database=popforums19;Trusted_Connection=True;TrustServerCertificate=True;"
+      "ConnectionString": "Server=aapmsitefinitysql,1433;Database=popforums19;User ID=sa;Password=Sitefinity14@2022;TrustServerCertificate=True;Encrypt=False"
     },
     "Cache": {
       "Seconds": 180,
