--- a/src/PopForums.Mvc/PopForums.Mvc.csproj
+++ b/src/PopForums.Mvc/PopForums.Mvc.csproj
@@ -16,6 +16,7 @@
 		<!--This is an important line to trigger the hot reload:-->
 		<AssignTargetPathsDependsOn>CompileTypeScript;$(AssignTargetPathsDependsOn)</AssignTargetPathsDependsOn>
 		<StaticWebAssetBasePath>/PopForums</StaticWebAssetBasePath>
+		<TypeScriptCompileBlocked>true</TypeScriptCompileBlocked>
 	</PropertyGroup>
 
 	<ItemGroup>
