--- a/src/PopForums.Web/PopForums.Web.csproj
+++ b/src/PopForums.Web/PopForums.Web.csproj
@@ -5,6 +5,10 @@
 		<VersionPrefix>19.0.0</VersionPrefix>
 		<AssemblyName>PopForums.Web</AssemblyName>
 		<PackageId>PopForums.Web</PackageId>
+		<UserSecretsId>47a38b91-39a2-441a-8763-28b75d97ab03</UserSecretsId>
+		<DockerDefaultTargetOS>Windows</DockerDefaultTargetOS>
+		<DockerfileContext>..\..</DockerfileContext>
+		<DockerComposeProjectPath>..\..\docker-compose.dcproj</DockerComposeProjectPath>
 	</PropertyGroup>
 
 	<ItemGroup>
@@ -19,5 +23,4 @@
 		<Folder Include="Areas\Forums\" />
 		<Folder Include="wwwroot\" />
 	</ItemGroup>
-
 </Project>
